tests/cases/traits/errors/trait-impl-missing-method.ari
trait Show[T] {
  fn show(self) -> i64
}

impl Show[i64] for i64 {
}

fn main() -> i64 {
  return 0;
}
